# haskell.template

./: .ghci  COPYING  LICENSE  PROJECT_LOWER.cabal  README  README.md  template
demo/: Main.hs  PROJECT_LOWER-demo.cabal
demo/PROJECT_NAMESPACE_DIR/: Demo.hs
src/: PROJECT_NAMESPACE_DIR.hs
src/PROJECT_NAMESPACE_DIR/: Core.hs  EitherT.hs  Prelude.hs
test/: Main.hs  PROJECT_LOWER-test.cabal  test.hs
test/PROJECT_NAMESPACE_DIR/: Tests.hs
test/Test/: PROJECT_NAMESPACE_DIR.hs
