Name:               PROJECT_LOWER
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          (c) 2012 Mark Hibberd
Synopsis:           PROJECT_DESC
Category:           Database
Homepage:           https://github.com/GITHUB_USER/PROJECT_LOWER
Bug-reports:        https://github.com/GITHUB_USER/PROJECT_LOWER/issues
Cabal-Version:      >= 1.8
Build-Type:         Simple
Description:
  PROJECT_LOWER

Source-Repository   head
  Type:             git
  Location:         https://github.com/GITHUB_USER/PROJECT_LOWER.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base                            >= 3          && < 5

  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    PROJECT_NAMESPACE
                    PROJECT_NAMESPACE.Core

