Name:               PROJECT_LOWER
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Navin Keswani <navin@keswani.id.au>
Maintainer:         Navin Keswani <navin@keswani.id.au>
Copyright:          (c) 2012 Navin Keswani
Synopsis:           PROJECT_DESC
Category:           PROJECT_CAT
Homepage:           https://github.com/GITHUB_USER/PROJECT_LOWER
Bug-reports:        https://github.com/GITHUB_USER/PROJECT_LOWER/issues
Cabal-Version:      >= 1.24
Build-Type:         Simple
Description:
  PROJECT_LOWER

Source-Repository   head
  Type:             git
  Location:         https://github.com/GITHUB_USER/PROJECT_LOWER.git

Library
  Default-Language: Haskell2010

  Build-Depends:
                    base                            >= 3          && < 5

  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    PROJECT_NAMESPACE
                    PROJECT_NAMESPACE.Core

Test-Suite          test
  Default-Language: Haskell2010
  Type:             exitcode-stdio-1.0
  Main-Is:          test.hs
  Hs-Source-Dirs:   test
  Build-Depends:
                    base                            >= 3          && < 5
                  , hedgehog                        == 0.5.*
                  , PROJECT_LOWER

  ghc-options:
                  -Wall -threaded -O2
